# ros2_ws

./: frames_2026-02-14_05.06.16.gv
install/: local_setup.sh  setup.sh
install/arduino_diffdrive/lib/arduino_diffdrive/: arduino_diffdrive_node
install/arduino_diffdrive/share/arduino_diffdrive/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fleet_manager/lib/fleet_manager/: fleet_manager_node
install/fleet_manager/share/fleet_manager/: local_setup.bash  (+9 more)
log/: latest_build
maps/: frames_2026-02-13_21.35.21.gv  frames_2026-02-13_23.11.57.gv
scripts/: fake_sensors.py  robot_health_check.py
src/arduino_diffdrive/: CMakeLists.txt_BKP
src/arduino_diffdrive/src/: arduino_diffdrive_node.cpp_bkp
src/fleet_manager/: CMakeLists.txt
src/fleet_manager/src/: fleet_manager_node.cpp
src/nav_bringup/: CMakeLists.txt  setup.py
src/nav_bringup/config/: nav2_params.yaml  rviz_config.rviz  slam_params.yaml
src/nav_bringup/launch/: full_navigation.launch.py  nav2.launch.py  rviz.launch.py  slam.launch.py  slam_nav2.launch.py
src/nav_bringup/maps/: my_map.pgm  my_map.yaml
src/nav_bringup/rviz/: nav2.rviz
src/robot_bringup/: CMakeLists.txt  setup.py
src/robot_bringup/config/: diff_drive.yaml
src/robot_bringup/launch/: lidar.launch.py
src/robot_bringup/rviz/: robot.rviz
src/robot_hardware/arduino_diffdrive/: CMakeLists.txt
src/robot_tests/motor_test/: package.xml  setup.cfg  setup.py
src/robot_utils/: robot_health_check.pybkp01
web_ui/: server.py
(+112 files in other folders)
